Fix up users controller return types.
