# LeaderboardBackend/openapi.json
@@ -1540,10 +1540,17 @@
         ],
         "responses": {
           "200": {
-            "description": "The `User` was found and returned successfully."
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserViewModel"
+                }
+              }
+            }
           },
           "404": {
-            "description": "No `User` with the requested ID could be found."
+            "description": "Not Found"
           }
         }
       }
@@ -1591,13 +1598,14 @@
         ],
         "responses": {
           "200": {
-            "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "Forbidden"
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserViewModelListView"
+                }
+              }
+            }
           },
           "422": {
             "description": "Unprocessable Content",
@@ -1608,6 +1616,12 @@
                 }
               }
             }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
           }
         }
       }
@@ -1618,17 +1632,23 @@
           "Users"
         ],
         "summary": "Gets the currently logged-in User.",
-        "description": "Call this method with the 'Authorization' header. A valid JWT bearer token must be\npassed.\nExample: `{ 'Authorization': 'Bearer JWT' }`.",
         "operationId": "me",
         "responses": {
           "200": {
-            "description": "The `User` was found and returned successfully."
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserViewModel"
+                }
+              }
+            }
           },
           "404": {
-            "description": "The user was not found in the database."
+            "description": "Not Found"
           },
           "401": {
-            "description": "An invalid JWT was passed in."
+            "description": "Unauthorized"
           }
         }
       }
@@ -1671,14 +1691,7 @@
             "description": "No Content"
           },
           "404": {
-            "description": "Not Found",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
+            "description": "Not Found"
           },
           "401": {
             "description": "Unauthorized"
@@ -1689,16 +1702,6 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
-          },
-          "422": {
-            "description": "Unprocessable Content",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ValidationProblemDetails"
                 }
               }
             }
@@ -2691,6 +2694,39 @@
             "type": "string",
             "format": "date-time",
             "example": "1984-01-01T00:00:00Z"
+          }
+        },
+        "additionalProperties": false
+      },
+      "UserViewModelListView": {
+        "required": [
+          "data",
+          "limitDefault",
+          "limitMax",
+          "total"
+        ],
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/UserViewModel"
+            }
+          },
+          "total": {
+            "type": "integer",
+            "description": "The total number of records matching the given criteria that\nexist in the database, NOT the total number of records returned.",
+            "format": "int64"
+          },
+          "limitDefault": {
+            "type": "integer",
+            "description": "The default limit that will be applied for this resource type\nif the client does not specify one in the query string.",
+            "format": "int32"
+          },
+          "limitMax": {
+            "type": "integer",
+            "description": "The maximum value the client is allowed to specify as a limt for\nendpoints return a paginated list of resources of this type.\nExceeding this value will result in an error.",
+            "format": "int32"
           }
         },
         "additionalProperties": false
